# roman_pointing

./: .gitmodules  TargetStarsVisual (1).ipynb  TargetStarsVisual.ipynb  requirements.txt
Optimization/cgi_noise/: Example_Sensitivity.py  Example_tSNR.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
Optimization/cgi_noise/cgi_noise/: __init__.py  cginoiselib.py  loadCSVrow.py  sens_core.py  tsnr_core.py  unitsConstants.py
Optimization/cgi_noise/cgi_noise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Optimization/cgi_noise/cgi_noise/data/Calibration/: CAL_EB_TTR_241227.csv
Optimization/cgi_noise/cgi_noise/data/Cstability/: CS_NFB1_HLC_250616_OPT.csv  CS_NFB1_HLC_250616_TVAC.csv  CS_NFB1_HLC_250617_CON.csv  CS_NFB3_SPC_250620_CON.csv  CS_NFB3_SPC_250620_OPT.csv  CS_WFB1_SPC_260206_CON.csv  CS_WFB1_SPC_260206_OPT.csv  CS_WFB4_SPC_250620_CON.csv  CS_WFB4_SPC_250620_OPT.csv
Optimization/cgi_noise/cgi_noise/data/Photometry/: CGPERF_HLC_NFB1_190210.csv  CGPERF_SPC_NFB3_200617.csv  CGPERF_SPC_WFB1_260206.csv  CGPERF_SPC_WFB4_200610.csv  DET_CBE_250530.csv  DET_QE_e2v_Spec.csv  STRAY_CBE_250605.csv  THPT_HLC_NFB1_240725.csv  THPT_SPC_NFB3_200730.csv  THPT_SPC_WFB4_200730.csv  detectorParameters.xlsx
Optimization/cgi_noise/cgi_noise/data/Scenarios/: CON_IMG_NFB1_HLC.yml  CON_IMG_WFB1_SPC.yml  CON_IMG_WFB4_SPC.yml  CON_SPEC_NFB3_SPC.yml  OPT_IMG_NFB1_HLC.yml  OPT_IMG_WFB1_SPC.yml  OPT_IMG_WFB4_SPC.yml  OPT_SPEC_NFB3_SPC.yml  REFERENCE_IMG_NFB1_HLC.yml
Optimization/cgi_noise/cgi_noise/data/Spectra/: SPECTRA_ALL_BPGS.csv
(+177 files in other folders)
